--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -45,6 +45,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 2rem 0;
   }
 
   .page-title {
